Issue #4. Link to my YouTube channel is made a little bit more visible.

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -44,6 +44,17 @@
     }
   }
 
+  .page-link-red {
+    color: $page-link-red-color;
+    line-height: $base-line-height;
+    font-style: italic;
+
+    // Gaps between nav items, but not on the last one
+    &:not(:last-child) {
+      margin-right: 20px;
+    }
+  }
+
   @include media-query($on-palm) {
     position: absolute;
     top: 9px;
