--- a/css/main.scss
+++ b/css/main.scss
@@ -25,9 +25,10 @@ $base-line-height: 1.5;
 
 $spacing-unit:     30px;
 
-$text-color:       #111;
-$background-color: #fdfdfd;
-$brand-color:      #2a7ae2;
+$text-color:          #111;
+$page-link-red-color: #f95c07;
+$background-color:    #fdfdfd;
+$brand-color:         #2a7ae2;
 
 $grey-color:       #828282;
 $grey-color-light: lighten($grey-color, 40%);
